# cyclingPro

./: .gitignore  README.md  pyproject.toml
cyclingPro/: definitions.py
cyclingPro/ingestion/: definitions.py  resources.py
cyclingPro/jobs/: __init__.py
cyclingPro/transformation/: definitions.py  resources.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: check_for_date_validity.sql  clean_and_upper.sql  generate_schema_name.sql  no_leading_trailing_spaces_for_cst_key.sql  normalize_value.sql  safe_date_cast.sql
dbt/models/marts/: _sources.yml  dim_customers.sql  dim_products.sql  fact_sales.sql  schema.yml
dbt/models/staging/: _sources.yml  stg_crm_cust_info.sql  stg_crm_cust_info.yml  stg_crm_prd_info.sql  stg_crm_prod_info.yml  stg_crm_sales_details.sql  stg_crm_sales_details.yml  stg_erp_cust_info.sql  stg_erp_cust_info.yml  stg_erp_location.sql  stg_erp_location.yml  stg_erp_prod_category.sql  stg_erp_prod_category.yml
dbt/tests/: no_leading_spaces_for_cust_key.sql  valid_birthdates.sql
docs/: Replicate.md
infrastructure/: README.md  export-envs.sh  main.tf  outputs.tf  variables.tf
