[project]
name = "cyclingPro"
version = "0.1.0"
description = "cyclingPro Data Warehousing"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-snowflake",
    "dbt-core",
    "dlt",
    "duckdb",
    "dbt-duckdb",
    "boto3",
    "pandas"

]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "cyclingPro.definitions"
code_location_name = "cyclingPro"

[tool.setuptools.packages.find]
exclude=["cyclingPro_tests"]
